feat(spx-gui): impl course ordering by series ID and integrate community footer into tutorial pages
